@@ -9,10 +9,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,25 +28,25 @@ public class HashGenerator {
     @Transactional
     public List<String> getHashes(long amount) {
         log.info("Getting {} hashes from DB", amount);
-        List<Hash> hashBatch = hashRepository.getHashAndDelete(amount);
+        List<String> hashBatch = hashRepository.getHashAndDelete(amount);
         if (hashBatch.size() < amount) {
             log.info("Not enough hashes in DB: {}, generating new batch", hashBatch.size());
             generateBatch();
             hashBatch.addAll(hashRepository.getHashAndDelete(amount - hashBatch.size()));
         }
-        saveBatch(hashBatch);
-        return hashBatch.stream()
-                .map(Hash::getHash)
-                .collect(Collectors.toList());
+
+        List<Hash> hashes = convertToHashEntities(hashBatch);
+        saveBatch(hashes);
+        return hashes.stream().map(Hash::getHash).toList();
     }
 
     public void generateBatch() {
         Set<Long> uniqueNumbers = hashRepository.getUniqueNumbers(uniqueNumber);
         List<Hash> hashes = uniqueNumbers.stream()
-                .map(Base62Encoder::encode)
+                .map(base62Encoder::encode)
                 .distinct()
                 .map(hash -> Hash.builder().hash(hash).build())
-                .collect(Collectors.toList());
+                .toList();
         log.info("{} hashes successfully generated ", hashes.size());
         saveBatch(hashes);
     }
@@ -58,11 +58,18 @@ public class HashGenerator {
 
     public void saveBatch(List<Hash> hashes) {
         long start = System.currentTimeMillis();
+
         for (int i = 0; i < hashes.size(); i += batchSize) {
             int end = Math.min(i + batchSize, hashes.size());
             List<Hash> sub = hashes.subList(i, end);
             hashRepository.saveAll(sub);
         }
         log.info("{} hashes were successfully saved to DB in {} ms", hashes.size(), System.currentTimeMillis() - start);
+    }
+
+    private List<Hash> convertToHashEntities(List<String> stringHashes) {
+        return stringHashes.stream()
+                .map(hash -> Hash.builder().hash(hash).build())
+                .toList();
     }
 }
